Two changes to fix windows build: compile DualSlider into VE_ConductorGUI_UtilitiesLib, and added a VE_Model dependency to the DefaultPlugin

--- a/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
+++ b/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
@@ -150,6 +150,9 @@
 				RelativePath=".\CADTreeBuilder.cxx">
 			</File>
 			<File
+				RelativePath=".\DualSlider.cxx">
+			</File>
+			<File
 				RelativePath=".\Link.cxx">
 			</File>
 			<File
