--- a/VE_Open/VESOpen/VESOpen.vcproj
+++ b/VE_Open/VESOpen/VESOpen.vcproj
@@ -95,6 +95,7 @@
 				Name="VCPreBuildEventTool"
 				Description="IDL Compiler"
 				CommandLine="echo C++ stubs. . .
+call $(VE_SUITE_HOME)/VE_Installer/setup.bat
 $(ACE_ROOT)/bin/tao_idl.exe -in -o $(VE_SUITE_HOME)/VE_Open/skel -GI $(VE_SUITE_HOME)/VE_Open/idl/module.idl -t $(VE_SUITE_HOME)/VE_Installer -H dynamic_hash -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h
 $(ACE_ROOT)/bin/tao_idl.exe -in -o $(VE_SUITE_HOME)/VE_Open/skel -GI $(VE_SUITE_HOME)/VE_Open/idl/VjObs.idl -t $(VE_SUITE_HOME)/VE_Installer -H dynamic_hash -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h
 echo Done.
