--- a/VE_Conductor/DefaultPlugin/Makefile
+++ b/VE_Conductor/DefaultPlugin/Makefile
@@ -1,69 +1,79 @@
-# Create the OS-dependent directory name
-CFDHOSTTYPE?=	$(DZR_HOSTTYPE)
-PLUGIN = DefaultPlugin
-APP_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/$(PLUGIN).so
-
-VE_CONDUCTOR_HOME = $(VE_SUITE_HOME)/VE_Conductor
-
-all:
-	mkdir -p ../GUIPlugins/$(CFDHOSTTYPE)
-	$(MAKE) NO_DEPEND=0 cxx
-	$(MAKE) $(APP_NAME)
-
-srcdir= .
-
+# ************** <auto-copyright.pl BEGIN do not edit this line> **************
+#
+# VE-Suite is (C) Copyright 1998-2004 by Iowa State University
+#
+# Original Development Team:
+#   - ISU's Thermal Systems Virtual Engineering Group,
+#     Headed by Kenneth Mark Bryden, Ph.D., www.vrac.iastate.edu/~kmbryden
+#   - Reaction Engineering International, www.reaction-eng.com
+#
+# This library is free software; you can redistribute it and/or
+# modify it under the terms of the GNU Library General Public
+# License as published by the Free Software Foundation; either
+# version 2 of the License, or (at your option) any later version.
+#
+# This library is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+# Library General Public License for more details.
+#
+# You should have received a copy of the GNU Library General Public
+# License along with this library; if not, write to the
+# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+# Boston, MA 02111-1307, USA.
+#
+# -----------------------------------------------------------------
+# File:          $RCSfile: Makefile,v $
+# Date modified: $Date: 2005-06-27 02:00:28 -0500 (Mon, 27 Jun 2005) $
+# Version:       $Rev: 2519 $
+# -----------------------------------------------------------------
+#
+# *************** <auto-copyright.pl END do not edit this line> ***************
+CFDUNAME = $(shell uname)
+#__________________________________________________________
+# list the source files that are in current directory
 SRCS=\
    DefaultPlugin.cpp \
-	DefaultPlugin_UI_Dialog.cpp 
-
-# Specify the OS-dependent directory name for object files and depends
-OBJDIR= $(CFDHOSTTYPE)
-DEPDIR= $(CFDHOSTTYPE)
-
-NO_DEPEND= YES
-
-# One of these must be uncommented.
-#DEBUG_APP?= TRUE
-OPTIM_APP?= TRUE
-
-EXTRA_CFLAGS+=
-
-EXTRA_CXXFLAGS+= 
-
-EXTRA_INCLUDES+= -I$(VE_CONDUCTOR_HOME)/Framework 
+	DefaultPlugin_UI_Dialog.cpp
+			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
+#EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
+#EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Builder/Translator
 
-EXTRA_DEFS+=
+#EXTRA_LDFLAGS+= -L$(VJ_DEPS_DIR)/lib
+#DSO_PLUGIN_DEPS+= $(shell vrjuggler-config --extra-libs)
+$(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
+DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
+DSO_PLUGIN_DEPS+= -lVE_XMLLib
+DSO_PLUGIN_DEPS+= -lVE_ModelLib
+DSO_PLUGIN_DEPS+= -lVE_CADLib
+DSO_PLUGIN_DEPS+= -lVE_ShaderLib
+DSO_PLUGIN_DEPS+= -lGUIPluginLib
+#EXTRA_LIBS+= -lVE_OpenModuleLib
 
-EXTRA_LIBS+= -shared 
-# IRIX needs these flags
-CFDUNAME = $(shell uname)
-ifeq (${CFDUNAME},IRIX64)
-   EXTRA_CXXFLAGS+= 
-   EXTRA_LIBS+= 
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
+
+# -----------------------------------------------------------------------------
+# following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
+
+PLUGIN_NAME= $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)/DefaultPlugin
+#OBJDIR is the place that the object files are stored.
+OBJDIR= $(CFDHOSTTYPE)_VE_DefaultPlugin
+
+#DEPDIR is the place that the dependency files are stored.
+DEPDIR= $(CFDHOSTTYPE)_VE_DefaultPlugin
+
+#BUILD_TYPE=	dbg
+
+EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
+#EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/Framework
+srcdir= .
+
+ifeq (${CFDUNAME},Darwin)
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ves.mac.lib.mk
 else
-   EXTRA_CXXFLAGS+= -fPIC
-   EXTRA_LIBS+= -fPIC
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ves.linux.lib.mk
 endif
 
-LINKALL_ON= -all
-LINKALL_OFF=
-
-STATIC_ON= @APP_LINK_STATIC_ON@
-STATIC_OFF= @APP_LINK_STATIC_OFF@
-
-include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
-
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.ace_tao.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
-
-# -----------------------------------------------------------------------------
-# Application build targets.
-# -----------------------------------------------------------------------------
-cxx: $(OBJS)
-
-${APP_NAME}: $(OBJS)
-	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-
-CLEAN_FILES+= $(APP_NAME)
