Added the sending setup for information from the contours dialog. The setup is basically as follows: vistab sets the command and the basic information (scalar,vector,range etc). If a sub dialog is being used, an extra datavalue pair containing a command that is basically the settings from the sub dialogs is added to the current visualization command. Not sure if this is a good way to do this or not.

--- a/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
+++ b/VE_Conductor/Utilities/VE_ConductorGUI_UtilitiesLib.vcproj
@@ -172,6 +172,9 @@
 				RelativePath=".\CADTreeBuilder.h">
 			</File>
 			<File
+				RelativePath=".\DualSlider.h">
+			</File>
+			<File
 				RelativePath=".\Link.h">
 			</File>
 			<File
