--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -579,6 +579,9 @@
 				RelativePath=".\advancedcontours.h">
 			</File>
 			<File
+				RelativePath=".\advancedstreamlines.h">
+			</File>
+			<File
 				RelativePath=".\advancedvectors.h">
 			</File>
 			<File
