linux side ...these should be moved to gui utils so that they can be used outside of VE-Conductor...should all of our popup dialogs be like that?

--- a/VE_Conductor/Utilities/Makefile
+++ b/VE_Conductor/Utilities/Makefile
@@ -38,6 +38,11 @@ SRCS=\
    Polygon.cxx\
    Tag.cxx\
    CADTreeBuilder.cxx \
+   CADNodeManagerDlg.cxx \
+   CADMaterialEditMenu.cxx \
+   CADNodeMenu.cxx \
+   CADNodePropsDlg.cxx \
+   CADOpacitySliderDlg.cxx \
    DualSlider.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
