Initial work to support new vis tab in conductor

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -117,7 +117,8 @@ SRCS=\
    MaterialModeUpdateEH.cxx \
    MaterialUpdateEH.cxx\
    trackball.cxx\
-   cfdTrackball.cxx
+   cfdTrackball.cxx\
+   CreateVisObjectEventHandler.cxx
 #   cfdObjectHandler.cxx 
 
 			
