temporary commit...vistab isn't receiving the scalar vector information

--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -322,9 +322,6 @@
 				RelativePath=".\SoundsPane.cpp">
 			</File>
 			<File
-				RelativePath=".\StreamersPane.cxx">
-			</File>
-			<File
 				RelativePath=".\streamlines.cpp">
 			</File>
 			<File
@@ -337,212 +334,7 @@
 				RelativePath=".\TransformUI.cxx">
 			</File>
 			<File
-				RelativePath="..\Ve_ui\UI_AdvectionPanel.cxx">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_DataSetPanel.cpp">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_DesignParTab.cpp">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_Frame.cpp">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_GeometryTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="UI_i.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_ModelData.cpp">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_ModSelPanel.cpp">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_NavTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories=""
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_SoundsTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_StreamTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_Tabs.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_TeacherTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_TransientDialog.cxx">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_TransTab.cpp">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_VecTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_VertTab.cpp">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_VisTab.cpp">
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="2"
-						PreprocessorDefinitions=""/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="dbg|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						Optimization="0"
-						AdditionalIncludeDirectories="..\IDL"
-						PreprocessorDefinitions=""
-						BasicRuntimeChecks="3"
-						BrowseInformation="1"/>
-				</FileConfiguration>
+				RelativePath=".\UI_i.cpp">
 			</File>
 			<File
 				RelativePath=".\vectors.cpp">
@@ -639,9 +431,6 @@
 				RelativePath=".\SoundsPane.h">
 			</File>
 			<File
-				RelativePath=".\StreamersPane.h">
-			</File>
-			<File
 				RelativePath=".\streamlines.h">
 			</File>
 			<File
@@ -652,60 +441,6 @@
 			</File>
 			<File
 				RelativePath=".\TransformUI.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_AdvectionPanel.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_DataSetPanel.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_DesignParTab.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_Frame.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_GeometryTab.h">
-			</File>
-			<File
-				RelativePath="UI_i.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_ModelData.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_ModSelPanel.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_NavTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_SoundsTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_StreamTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_Tabs.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_TeacherTab.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_TransientDialog.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_TransTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_VecTab.h">
-			</File>
-			<File
-				RelativePath="..\Ve_ui\UI_VertTab.h">
-			</File>
-			<File
-				RelativePath="..\VE_UI\UI_VisTab.h">
 			</File>
 			<File
 				RelativePath=".\vectors.h">
