new additions to handle clear all as well as shutdown cloeanly again

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -119,7 +119,8 @@ SRCS=\
    trackball.cxx\
    cfdTrackball.cxx\
    cfdObjectHandler.cxx\
-   CreateVisObjectEventHandler.cxx
+   CreateVisObjectEventHandler.cxx\
+   ClearVisObjectsEventHandler.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
