--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -120,8 +120,8 @@ SRCS=\
    cfdTrackball.cxx\
    cfdObjectHandler.cxx\
    CreateVisObjectEventHandler.cxx\
-   ClearVisObjectsEventHandler.cxx
-
+   ClearVisObjectsEventHandler.cxx\
+   DeleteObjectFromNetworkEventHandler.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
