--- a/VE_Xplorer/XplorerNetwork/XplorerNetworkLib.vcproj
+++ b/VE_Xplorer/XplorerNetwork/XplorerNetworkLib.vcproj
@@ -3,7 +3,7 @@
 	ProjectType="Visual C++"
 	Version="7.10"
 	Name="XplorerNetworkLib"
-	ProjectGUID="{HABE88BF-58EE-3E76-84BB-7B801U9FD01F}"
+	ProjectGUID="{B5039180-C3C2-4D37-8B6C-004E58627DF8}"
 	RootNamespace="VE_Xplorer"
 	SccProjectName=""
 	SccLocalPath="">
@@ -87,7 +87,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(PFROOT)\include&quot;;&quot;$(PFROOT)\include\Performer&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\msw&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(XERCESCROOT)\src&quot;"
-				PreprocessorDefinitions="_DEBUG;_PERFORMER;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_TAO;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;VE_GRAPHICALPLUGINS_LIBRARY;_WINDOWS;_STLP_USE_OWN_NAMESPACE"
+				PreprocessorDefinitions="_DEBUG;_PERFORMER;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_TAO;__WXDEBUG__;WXDEBUG=1;WXUSINGDLL;XPLORER_NETWORK_LIBRARY;_WINDOWS;_STLP_USE_OWN_NAMESPACE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="TRUE"
@@ -103,7 +103,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_pf_d.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libpf.lib libpfv.lib libpfui.lib libpfdu-util.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib xerces-c_2D.lib wxbase26d.lib wxmsw26d_core.lib"
 				ShowProgress="0"
-				OutputFile="$(OutDir)\GraphicalPlugin_tao_pf_d.dll"
+				OutputFile="$(OutDir)\XplorerNetworkLib_tao_pf_d.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;$(VTK_HOME)\lib&quot;;&quot;$(PFROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\lib&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7.1\Debug&quot;"
@@ -152,7 +152,7 @@
 				AdditionalOptions="/Zm800"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(OSGHOME)\include&quot;;&quot;$(VTK_HOME)\include\vtk-5.0&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;;&quot;$(VE_SUITE_HOME)&quot;;&quot;$(WX_HOME)\include&quot;;&quot;$(WX_HOME)\lib\vc_dll\mswd&quot;;&quot;$(XERCESCROOT)\src&quot;;&quot;$(XERCESCROOT)\include&quot;;&quot;$(TAO_ROOT)\orbsvcs&quot;;&quot;$(ACE_ROOT)&quot;;&quot;$(TAO_ROOT)&quot;;&quot;$(OSGHOME)\..\OpenThreads\include&quot;"
-				PreprocessorDefinitions="_DEBUG;_USRDLL;_OSG;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_WINDOWS;__WXDEBUG__;WXUSINGDLL;VE_GRAPHICALPLUGINS_LIBRARY;_TAO"
+				PreprocessorDefinitions="_DEBUG;_USRDLL;_OSG;VTK44;TABLET;WIN32;_CONSOLE;_WIN32;_WINDOWS;__WXDEBUG__;WXUSINGDLL;XPLORER_NETWORK_LIBRARY;_TAO"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				BufferSecurityCheck="FALSE"
@@ -173,7 +173,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr_d.lib vrj_d.lib vrj_ogl_d.lib osgd.lib osgUtild.lib osgDBd.lib OpenThreadsWin32d.lib Producerd.lib libnspr4.lib jccl_d.lib sonix_d.lib gadget_d.lib msvcstubd.lib vtkHybrid.lib vtkCommon.lib vtkFiltering.lib vtkGraphics.lib vtkImaging.lib vtkIO.lib vtkRendering.lib libplc4.lib comctl32.lib ws2_32.lib opengl32.lib glu32.lib xerces-c_2D.lib aced.lib TAOd.lib TAO_CosNamingd.lib TAO_PortableServerd.lib TAO_BiDirGIOPd.lib TAO_AnyTypeCoded.lib wxbase26d.lib wxmsw26d_core.lib"
 				ShowProgress="0"
-				OutputFile="$(OutDir)/GraphicalPlugin_tao_osg_d.dll"
+				OutputFile="$(OutDir)/XplorerNewtworkLib_tao_osg_d.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
 				AdditionalLibraryDirectories="&quot;$(OSGHOME)\lib&quot;;&quot;$(OSGHOME)\..\OpenThreads\lib\win32&quot;;&quot;$(OSGHOME)\..\Producer\lib&quot;;&quot;$(VTK_HOME)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(XERCESCROOT)\Build\Win32\VC7.1\Debug&quot;;&quot;$(TAO_ROOT)\tao&quot;;&quot;$(TAO_ROOT)\orbsvcs\orbsvcs&quot;;&quot;$(TAO_ROOT)\tao\BiDir_GIOP&quot;;&quot;$(TAO_ROOT)\tao\PortableServer&quot;;&quot;$(ACE_ROOT)\bin&quot;;&quot;$(ACE_ROOT)\lib&quot;;&quot;$(ACE_ROOT)\ace&quot;;&quot;$(WX_HOME)\lib\vc_dll&quot;"
@@ -182,7 +182,7 @@
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(IntDir)/GraphicalPlugin_tao_osg_d.pdb"
 				SubSystem="0"
-				ImportLibrary="$(OutDir)/GraphicalPlugin_tao_osg_d.lib"
+				ImportLibrary="$(OutDir)/XplorerNetworkLib_tao_osg_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
@@ -217,14 +217,62 @@
 			Name="src"
 			Filter=".cpp">
 			<File
-				RelativePath="$(VE_SUITE_HOME)\VE_Xplorer\cfdVEBaseClass.cxx">
+				RelativePath=".\cfdExecutive.cxx">
+			</File>
+			<File
+				RelativePath=".\cfdVEAvailModules.cxx">
+				<FileConfiguration
+					Name="tao_osg_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\cfdVEPluginLoader.cxx">
+				<FileConfiguration
+					Name="tao_osg_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\DeleteObjectFromNetworkEventHandler.cxx">
+				<FileConfiguration
+					Name="tao_osg_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\VE_i.cpp">
+				<FileConfiguration
+					Name="tao_osg_dbg|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						ObjectFile="$(IntDir)/$(InputName)1.obj"/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
 			Name="headers"
 			Filter=".h">
 			<File
-				RelativePath="..\VE_Xplorer\cfdVEBaseClass.h">
+				RelativePath=".\cfdExecutive.h">
+			</File>
+			<File
+				RelativePath=".\cfdVEAvailModules.h">
+			</File>
+			<File
+				RelativePath=".\cfdVEPluginLoader.h">
+			</File>
+			<File
+				RelativePath=".\DeleteObjectFromNetworkEventHandler.h">
+			</File>
+			<File
+				RelativePath=".\VE_i.h">
 			</File>
 		</Filter>
 	</Files>
