cleaning up the build...builds will need to be tested after this on other platforms

--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -331,7 +331,7 @@
 				RelativePath=".\UI_i.cpp">
 			</File>
 			<File
-				RelativePath="..\Ve_ui\UI_TransientDialog.cxx">
+				RelativePath=".\UI_TransientDialog.cxx">
 			</File>
 			<File
 				RelativePath=".\vectors.cpp">
@@ -432,6 +432,9 @@
 			</File>
 			<File
 				RelativePath=".\TransformUI.h">
+			</File>
+			<File
+				RelativePath=".\UI_TransientDialog.h">
 			</File>
 			<File
 				RelativePath="..\Ve_ui\UI_TransientDialog.h">
